# importguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/importguard/: __init__.py  cli.py  config.py  core.py  models.py  parser.py
tests/: test_cli.py  test_core.py  test_parser.py
